traefik/traefik-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: routing
spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/api/orders`)
      kind: Rule
      match: Host(`order.localhost`)
      services:
        - name: pizzify-order
          port: 80
    - match: PathPrefix(`/`)
      kind: Rule
      match: Host(`grafana.localhost`)
      services:
        - name: grafana
          port: 80
    - match: PathPrefix(`/`)
      kind: Rule
      match: Host(`prometheus.localhost`)
      services:
        - name: prometheus-stack-kube-prom-prometheus
          port: 9090
    - match: PathPrefix(`/`)
      kind: Rule
      match: Host(`jaeger.localhost`)
      services:
        - name: jaeger-jaeger-operator-jaeger-query
          port: 16686
    - match: PathPrefix(`/`)
      kind: Rule
      match: Host(`otel.localhost`)
      services:
        - name: otel-collector-daemonset-collector
          port: 4318
    - match: PathPrefix(`/`)
      kind: Rule
      match: Host(`app.localhost`)
      services:
        - name: pizzify-ui
          port: 80
